# athanor-registry

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  registry.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: module-submission.yml
.github/workflows/: update-download-counts.yml  validate-submission.yml
entries/atheneum/: README.md  manifest.json
entries/comms/: README.md  manifest.json
entries/feed/: README.md  manifest.json
entries/gardener/: README.md  manifest.json
entries/notes/: README.md  manifest.json
entries/omni-data/: README.md  manifest.json  module.json  pyproject.toml
entries/omni-data/omni_data/: __init__.py  bss_translator.py  config.py  orchestrator.py
entries/omni-data/omni_data/alternative/: __init__.py  onchain.py  pipelines.py  regulatory.py  sentiment.py  tradfi.py
entries/omni-data/omni_data/broadcaster/: __init__.py  charts.py  ipc.py  redis_ipc.py
entries/omni-data/omni_data/integrations/: __init__.py  gateway.py  orderflow.py  retry.py  websocket.py
entries/omni-data/omni_data/portfolio/: __init__.py  injector.py
entries/omni-data/omni_data/quant/: __init__.py  derivatives.py  indicators.py  options.py
entries/omni-data/omni_data/replay/: __init__.py  archiver.py  engine.py
entries/omni-data/omni_data/schemas/: __init__.py  models.py
entries/omni-data/tests/: benchmarks.py  test_engine.py
entries/tasks/: README.md  manifest.json
entries/web/: README.md  manifest.json
schemas/: manifest.schema.json  registry.schema.json
